Small changes on Card component

--- a/level-1/src/components/Card/Card.css
+++ b/level-1/src/components/Card/Card.css
@@ -1,4 +1,4 @@
-.card876345, .card647912, .card513864, .card982637, .card134076  {
+.card  {
     display: inline;
     width: 8rem;
     height: 8rem;
