--- a/level-6/src/components/Level1.css
+++ b/level-6/src/components/Level1.css
@@ -13,21 +13,34 @@ body {
 .question {
   border: 1px solid #c7c6c4;
   background-color: rgb(217, 145, 82, 0.6);
-  margin: 0;
+  margin: 0 auto;
+  font-family: "Space Mono", monospace;
+  width: 60%;
+  position: relative;
+  top: 50px;
+  font-size: 1.5rem;
 }
 
 .buttons {
-  padding: 10px;
+  /* padding: 10px; */
   width: 80px;
-  border-radius: 10px;
+  border-radius: 5px;
   margin: 10px;
   font-size: 1.5rem;
+  font-family: "Space Mono", monospace;
+  position: relative;
+  top: 60px;
+  font-weight: 700;
 }
 .answer-button {
   padding: 10px;
-  border-radius: 10px;
-  font-size: 1.5rem;
-  background-color: green;
+  border-radius: 5px;
+  font-size: 1.1rem;
+  font-weight: 700;
+  background-color: #3f768c;
+  font-family: "Space Mono", monospace;
+  position: relative;
+  margin-top: 80px;
 }
 
 .answer {
@@ -36,8 +49,18 @@ body {
 
 .jawab {
   font-size: 1.5rem;
+  font-family: "Space Mono", monospace;
+  position: relative;
+  top: 60px;
+  width: 60%;
+  margin: 0 auto;
+  color: white;
+  /* color: red; */
 }
 
 .Type-text {
-  font-size: 1.5rem;
+  font-family: "Space Mono", monospace;
+}
+.newClass {
+  font-family: "Space Mono", monospace;
 }
