--- a/level-6/src/components/congratulations.css
+++ b/level-6/src/components/congratulations.css
@@ -3,19 +3,20 @@ body {
   background-image: url(../assets/images/astronaut.jpeg);
   background-repeat: no-repeat;
   background-size: cover;
-  font-family: "Space Mono";
+  font-family: "Space Mono", monospace;
 }
 .congratulation {
-  width: 100vw;
-  height: 100vh;
-  margin: 0;
-  font-size: 2rem;
+  width: 60%;
+  margin: 0 auto;
+  font-size: 1.5rem;
   font-weight: 700;
+  font-family: "Space Mono", monospace;
 }
 
 .text {
   background-color: rgb(217, 145, 82, 0.6);
   margin: 50px;
+  border: solid 2px;
 }
 
 .congratsText {
@@ -30,6 +31,8 @@ body {
   padding: 10px;
   border-radius: 10px;
   margin: 10px;
-  font-size: 1.5rem;
-  background-color: #3f768c;
+  font-size: 1.1rem;
+  font-weight: 700;
+  background-color: #d9d9d9;
+  font-family: "Space Mono", monospace;
 }
