--- a/level-6/src/components/fly.css
+++ b/level-6/src/components/fly.css
@@ -10,3 +10,15 @@
 body {
   margin: 0;
 }
+
+.finalButton {
+  background-color: #d9d9d9;
+  font-family: "Space Mono", monospace;
+  font-size: 18px;
+  color: black;
+  border: none;
+  border-radius: 5px;
+  padding: 0.5rem;
+  position: relative;
+  top: 10vh;
+}
